Fixed splash image growing too large

--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -532,3 +532,7 @@ li {
   width: 200px;
   height: 200px;
 }
+
+.inherit-width{
+  width: 100%;
+}
